@@ -7,6 +7,6 @@ public class Skewness extends AbstractValue implements PayloadType<Float> {
 	static final protected String XMLElementName = "skewness";
 
 	public Skewness() {
-		super(XMLElementName, new Float(0), Float.MAX_VALUE);
+		super(XMLElementName, Float.valueOf(0), Float.MAX_VALUE);
 	}
 }
